--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,18 @@
   "description": "Frontend for SEC Marketing Rule Checker",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "@heroicons/react": "^2.0.18",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "tailwindcss": "^3.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +43,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17"
+    "@types/react-dom": "^18.2.17",
+    "serve": "^14.2.4"
   },
   "proxy": "http://localhost:8000"
-} 
+}
